--- a/contacto.html
+++ b/contacto.html
@@ -27,6 +27,8 @@
             });
         </script>
         
+        <script src="js/gen_validatorv4.js"></script>
+        
         <!- Google Analytics ->
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
