--- a/aviso_legal.html
+++ b/aviso_legal.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/header-basic-light.css">
         <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-        <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!- Este meta es necesario para la correcta visualización en todos los dispositivos ->
