--- a/aviso_legal.html
+++ b/aviso_legal.html
@@ -11,7 +11,7 @@
         <!- Header/Footer styles and fonts ->
         <link rel="stylesheet" href="css/header-basic-light.css">
         <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
         
